fixed 404 page height and delete popup not showing

--- a/css/404_custom.css
+++ b/css/404_custom.css
@@ -9,12 +9,12 @@ body {
 }
 
 .container {
-  position: relative;
-  top: 50vh;
-  left: 50vw;
+  position: absolute;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
-  height: 50rem;
-  max-height: 90vh;
+  height: 35rem;
+  max-height: 95vh;
   width: 35rem;
   max-width: 95vw;
   background-color: white;
